form relatorios prettier

--- a/public/stylesheets/alunos.css
+++ b/public/stylesheets/alunos.css
@@ -66,7 +66,8 @@
 .headerText{
     font-size: 25px;
     margin-top: 15px;
-    color:#0d2c92;
+    color:#0e215e;
+    font-weight: bold;
 }
 
 .listRelatorios{
