--- a/public/stylesheets/relatorios.css
+++ b/public/stylesheets/relatorios.css
@@ -1,276 +1,295 @@
-
-.btnNewR{
-    border-radius: 20px;
-	border: 1px solid transparent;
-	background-color: #0a67a5;
-	color: #f6f5f7;
-	font-size: 15px;
-	font-weight: bold;
-	padding: 9px 20px;
+.btnNewR {
+  border-radius: 20px;
+  border: 1px solid transparent;
+  background-color: #0a67a5;
+  color: #f6f5f7;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 9px 20px;
 }
 
-.listRelatorios{
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
+.listRelatorios {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
 }
 
-.data{
-    font-size: 18px;
-    padding:0;
-    background-color: transparent;
-    border: none;
+.data {
+  font-size: 18px;
+  padding: 0;
+  background-color: transparent;
+  border: none;
 }
 
 
 .urgentetrue {
-    background-color: rgb(248, 142, 106);
+  background-color: rgb(248, 142, 106);
 }
 
-.urgentText{
-    font-size: 15px;
+.urgentText {
+  font-size: 15px;
 }
 
-.containerUrgent{
-    
-}
+.containerUrgent {}
 
 .newRelatorio {
-    margin: 0 auto;
-    width: fit-content;
-    margin-top: 15px;
-    margin-bottom: 20px;
+  margin: 0 auto;
+  width: fit-content;
+  margin-top: 15px;
+  margin-bottom: 20px;
 }
 
 
 .btnSubmit {
-    width: 50px;
-    height: 50px;
-    padding: 0;
-    border: none;
+  width: 50px;
+  height: 50px;
+  padding: 0;
+  border: none;
 }
 
 .btnSave {
-    width: 50px;
-    height: 50px;
-    padding: 0;
-    border: none;
+  width: 50px;
+  height: 50px;
+  padding: 0;
+  border: none;
 }
 
-.submitRelatorio{
-  
-    display: flex;
-    flex-direction: row;
-    margin: 0 auto;
-    justify-content: space-between;
-    margin-top: 25px;
-    
+.submitRelatorio {
+
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  justify-content: space-between;
+  margin-top: 25px;
+
 
 }
 
-.urgentContainer{
-    display: flex;
-    flex-direction: row;
-   
+.urgentContainer {
+  display: flex;
+  flex-direction: row;
+
 }
 
-.urgentMessage{
-    color: red;
-    font-size: 15px;
+.urgentMessage {
+  color: red;
+  font-size: 15px;
 }
 
 .btnUrgent {
-    width: 20px;
-    height: 50px;
-    margin-left: 10%;
-    padding: 0;
-    border: none;
+  width: 20px;
+  height: 50px;
+  margin-left: 10%;
+  padding: 0;
+  border: none;
 }
 
 
 /*form relatorio*/
 
 .ContainerRelatorio {
-    margin: 0 auto;
-    background: linear-gradient( #84c2f5, #b0c7f5);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    width: 90%;
+  margin: 0 auto;
+  background: linear-gradient(#84c2f5, #b0c7f5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  width: 90%;
 
 }
 
 .formText {
-    font-size: 28px;
+  font-size: 28px;
 }
 
-.historyText{
-    font-size: 24px;
-   color: #0d2c92;
+.historyText {
+  font-size: 24px;
+  color: #0d2c92;
 }
 
 
 .slidecontainer {
-    width: 100%;
-  }
-  
-  .slider {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 15px;
-    background: #cec9cb;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-    
-  }
-  
-  .slider:hover {
-    opacity: 1;
-    
-  }
-  
-  .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 10px;
-    height: 25px;
-    background: #f9f9f9;
-    cursor: pointer;
-  }
-  
-  .slider::-moz-range-thumb {
-    width: 15px;
-    height: 25px;
-    background: #5078de;
-    cursor: pointer;
-    padding: 0;
-    border: 0;
-    border-radius: 5px;
-  }
+  width: 100%;
+}
 
-  .ContainerShowRelatorio{
-    display: flex;
-    flex-direction: column;
-    max-width: 70vw;
-    flex-basis: 33%;
-    width: 100%;
-    margin: 0 auto;
-  }
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  background: #cec9cb;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
 
-  .card-body{
-    background-color: transparent;
-  }
+}
 
-  .card {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border-radius: .25rem;
-    max-width: 550px;
-    margin-top: 10px;
-    min-height: 400px;
-    align-items: center;
-  }
+.slider:hover {
+  opacity: 1;
 
-  .ContainerRelatorioCreate {
-    margin: 0 auto;
-    background: linear-gradient( #a5d8fa, #828eff);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    margin-top: -20px;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 10px;
+  height: 25px;
+  background: #f9f9f9;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 15px;
+  height: 25px;
+  background: #5078de;
+  cursor: pointer;
+  padding: 0;
+  border: 0;
+  border-radius: 5px;
+}
+
+.ContainerShowRelatorio {
+  display: flex;
+  flex-direction: column;
+  max-width: 70vw;
+  flex-basis: 33%;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.card-body {
+  background-color: transparent;
+
+}
+
+.card {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border-radius: .25rem;
+  max-width: 550px;
+  margin-top: 10px;
+  min-height: 400px;
+  align-items: center;
+  border: 1 solid blue;
+}
+
+.ContainerRelatorioCreate {
+  margin: 0 auto;
+  background: linear-gradient(#d5e3fb, #828fff8e);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 70%;
+  margin-top: 20px;
+  border-radius: 10px;
 
 
 }
 
-.submitCard{
-    margin-right: 20px;
-    margin-left: 70%;
-    margin-top: -140px;
-    max-height: fit-content;
-    background-color: #fcfcfc;
-    border-radius: 10px;
+.submitCard {
+  margin-right: 20px;
+  max-height: fit-content;
+  background-color: #fcfcfc;
+  border-radius: 10px;
+  width: 60%;
+  margin-left: 20%;
+
 }
 
-.formsRelatorio{
-    width: 1800px;
-    margin-top: 10px;
+.formsRelatorio {
+  width: 1800px;
+  margin-top: 10px;
 }
 
 .row {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    
-  }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+
+}
 
 
+.formTextTitle {
+  font-size: 25px;
+}
 
-  
-  
-  main {
-    border-width: 2px 0;
-    border-style: solid;
-  }
-  
-  main h2 {
-    margin: 0;
-  }
-  
-  main > div + h2 {
-    border-top: 2px solid;
-  }
-  
-  h2 button {
-    all: inherit;
-    border: 0;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 0.5em 0;
-  }
-  
-  h2 button:focus svg {
-    outline: 2px solid;
-  }
-  
-  button svg {
-    height: 1em;
-    margin-left: 0.5em;
-  }
-  
-  [aria-expanded="true"] .vert {
-    display: none;
-  }
-  
-  [aria-expanded] rect {
-    fill: currentColor;
-  }
-  
-  /* page styles */
-  
-  html {
-    font-family: Arial, sans-serif;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
+
+h2{
+  border-bottom: 1px solid black;
+}
+main {
+  border-width: 2px 0;
+  border-style: solid;
+}
+
+main h2 {
+  margin: 0;
+}
+
+main>div+h2 {
+  border-top: 2px solid;
+}
+
+h2 button {
+  all: inherit;
+  border: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0.5em 0;
+}
+
+h2 button:focus svg {
+  outline: 2px solid;
+}
+
+button svg {
+  height: 1em;
+  margin-left: 0.5em;
+}
+
+[aria-expanded="true"] .vert {
+  display: none;
+}
+
+[aria-expanded] rect {
+  fill: currentColor;
+}
+
+/* page styles */
+
+html {
+  font-family: Arial, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body::-webkit-scrollbar {
+  width: 1em;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
