--- a/views/relatorios.ejs
+++ b/views/relatorios.ejs
@@ -6,7 +6,7 @@
 
 <div class="headerBar">
     <div class="headerLeft">
-        <img class="backIcon" src="/assets/goBack.png" onclick="history.go(-2)" />
+        <img class="backIcon" src="/assets/goBack.png" onclick="history.back()" />
         <p class="headerText">Lista de Relatórios do aluno(a) <%= aluno %>
         </p>
     </div>
