--- a/views/mensagens.ejs
+++ b/views/mensagens.ejs
@@ -1,39 +1,66 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/alunos.css" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/mensagens.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <div class="headerBar">
-        <div class="headerLeft">
-            <img class="backIcon" src="/assets/goBack.png" onclick="window.history.back()" />
-            </p>
-        </div>
-        <div>
-            <form action="/logout" method="post">
-                <button class="btnlog" type="submit">
-                    <img class="iconbtn" src="/assets/logout.png" />
-                </button>
-            </form>
-        </div>
+<div class="headerBar">
+    <div class="headerLeft">
+        <img class="backIcon" src="/assets/goBack.png" onclick="window.history.back()" />
+        </p>
     </div>
+    <div>
+        <form action="/logout" method="post">
+            <button class="btnlog" type="submit">
+                <img class="iconbtn" src="/assets/logout.png" />
+            </button>
+        </form>
+    </div>
+</div>
 
 <html>
-  <body>
-    <h1>Mensagens</h1>
-    <ul id="mensagens"></ul>
-    <ul>
-        <% mensagens.forEach(function (mensagem) { %>
-            <li>
-                <h1 class="userMensagem">
-                    <%= mensagem.id_docente %> - <%= mensagem.mensagem %>
-                </h1>
-            </li>
-            <% }) %>
-    </ul>
-    <form method="post">
-        <label for="mensagem">Mensagem : </label>
-        <input type="text" id="mensagem" name="mensagem" required />
-        <button type="submit">Enviar</button>
-      </form>
-  </body>
-</html>
 
+<head>
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css"
+        rel="stylesheet">
+</head>
+
+<body>
+    <div class="container">
+        <div class="messaging">
+            <div class="inbox_msg">
+                <div class="mesgs">
+                    <div class="msg_history">
+                        <div class="incoming_msg">
+                            <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+                                    alt="sunil"> </div>
+                            <div class="received_msg">
+                                <div class="received_withd_msg">
+                                    <p>MESSAGE CONTENT </p>
+                                    <span class="time_date"> DATA HORA</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="outgoing_msg">
+                            <div class="sent_msg">
+                                <p>MESSAGE CONTENT</p>
+                                <span class="time_date"> 11:01 AM | June 9</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="type_msg">
+                        <div class="input_msg_write">
+                            <input type="text" class="write_msg" placeholder="Type a message" />
+                            <button class="msg_send_btn" type="button"><i class="fa fa-paper-plane-o"
+                                    aria-hidden="true"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+</body>
+
+</html>
