--- a/views/mensagensEE.ejs
+++ b/views/mensagensEE.ejs
@@ -2,7 +2,6 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/mensagens.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script defer src="/javascripts/messages.js"></script>
 
 <div class="headerBar">
 	<div class="headerLeft">
@@ -17,84 +16,36 @@
 		</form>
 	</div>
 </div>
-
-
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-
-<html>
-
-<head>
-
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css"
-		rel="stylesheet">
-</head>
-
-<body>
-	<div class="container">
-		<div class="messaging">
-			<div class="inbox_msg">
-				<div class="inbox_people">
-					<div class="headind_srch">
-						<div class="recent_heading">
-							<h4>Recente</h4>
-						</div>
-						<div class="srch_bar">
-							<div class="stylish-input-group">
-								<input type="text" class="search-bar" placeholder="Search">
-								<span class="input-group-addon">
-									<button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
-								</span>
-							</div>
-						</div>
+<p></p>
+<div class="container">
+	<div class="messaging">
+		<div class="inbox_msg">
+			<div class="inbox_people">
+				<div class="headind_srch">
+					<div class="recent_heading">
+						<h4>Contactos</h4>
 					</div>
-					<div class="inbox_chat">
-						<div class="chat_list active_chat">
-							<div class="chat_people">
-								<div class="chat_ib">
-									<h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
-									<p>Test, which is a new approach to have all solutions
-										astrology under one roof.</p>
-								</div>
-							</div>
+					<div class="srch_bar">
+						<div class="stylish-input-group">
+							<input type="text" class="search-bar" placeholder="Procurar">
+							<span class="input-group-addon">
+								<button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
+							</span>
 						</div>
 					</div>
 				</div>
-				<div class="mesgs">
-					<div class="msg_history">
-						<div class="incoming_msg">
-							<div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png"
-									alt="sunil"> </div>
-							<div class="received_msg">
-								<div class="received_withd_msg">
-									<p>MESSAGE CONTENT </p>
-									<span class="time_date"> DATA HORA</span>
-								</div>
-							</div>
-						</div>
-						<div class="outgoing_msg">
-							<div class="sent_msg">
-								<p>MESSAGE CONTENT</p>
-								<span class="time_date"> 11:01 AM | June 9</span>
+				<div class="inbox_chat">
+					<% docentes.forEach(function (docente) { %>
+					<div class="chat_list active_chat" onclick="window.location='http://localhost:3000/homepage/EE/1/mensagens' + '/<%= docente.docente_id%>'">
+						<div class="chat_people">
+							<div class="chat_ib">
+								<h5> <%= docente.nome %> </h5>
 							</div>
 						</div>
 					</div>
-					<div class="type_msg">
-						<div class="input_msg_write">
-							<input type="text" class="write_msg" placeholder="Type a message" />
-							<button class="msg_send_btn" type="button"><i class="fa fa-paper-plane-o"
-									aria-hidden="true"></i></button>
-						</div>
-					</div>
+					<% }) %>
 				</div>
 			</div>
-
-
 		</div>
 	</div>
-</body>
-
-</html>
+</div>
