--- a/views/mensagensEE-ID.ejs
+++ b/views/mensagensEE-ID.ejs
@@ -46,7 +46,7 @@
 					<% }) %>
 				</div>
 			</div>
-				<div class="mesgs" id="11" value="2">
+				<div class="mesgs">
 					<div class="msg_history">
 						<% mensagens.forEach(function (mensagem) { %>
 							<% if(mensagem.type == 'docente'){ %>
