--- a/public/stylesheets/relatorios.css
+++ b/public/stylesheets/relatorios.css
@@ -187,7 +187,7 @@
 
 .ContainerRelatorioCreate {
   margin: 0 auto;
-  background: linear-gradient(#d5e3fb, #828fff8e);
+  background: linear-gradient(#8bb6f7e2, #b5ccefaf);
   display: flex;
   flex-direction: column;
   align-items: center;
