--- a/views/homepageD.ejs
+++ b/views/homepageD.ejs
@@ -1,11 +1,23 @@
 <link rel="stylesheet" href="/stylesheets/homepage.css" type="text/css" />
+<link rel="stylesheet" href="/stylesheets/alunos.css" type="text/css" />
 
-<div>
-    <form action="/logout" method="post">
-        <button class="btnlog" type="submit">
-            <img class="iconbtn" src="/assets/logout.png" />
-        </button>
-    </form>
+<head>
+    <meta charset="utf-8">
+    <title>CaderNet </title>
+</head>
+<div class="headerBar">
+    <div class="headerLeft">
+
+
+        <p></p>
+    </div>
+    <div>
+        <form action="/logout" method="post">
+            <button class="btnlog sairHome" type="submit">
+                <p class="textSair ">Sair</p>
+            </button>
+        </form>
+    </div>
 </div>
 
 
