--- a/views/homepageEE.ejs
+++ b/views/homepageEE.ejs
@@ -1,10 +1,11 @@
 <link rel="stylesheet" href="/stylesheets/homepageEE.css" type="text/css" />
+<link rel="stylesheet" href="/stylesheets/alunos.css" type="text/css" />
 
 
 
 <head>
     <meta charset="utf-8">
-    <title>Easy Grade </title>
+    <title>CaderNet </title>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:300,400,500,700">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -15,12 +16,19 @@
 
 <body>
 
-    <div class="logoutnbtn">
-        <form action="/logout" method="post">
-            <button class="btnlog" type="submit">
-                <img class="iconbtn" src="/assets/logout.png" />
-            </button>
-        </form>
+    <div class="headerBar">
+        <div class="headerLeft">
+            
+    
+            <p></p>
+        </div>
+        <div>
+            <form action="/logout" method="post">
+                <button class="btnlog sairHome" type="submit">
+                    <p class="textSair ">Sair</p>
+                </button>
+            </form>
+        </div>
     </div>
 
 
