--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>PeVV</title>
+    <title>CaderNet</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
     <script type="text/javascript" src="/jquery/jquery-3.6.0.min.js"></script>
   </head>
