--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,8 @@
+<head>
+	<meta charset="utf-8">
+	<title>CaderNet </title>
+</head>
+
 <script defer src="/javascripts/auth.js"></script>
 <%- include('./layout.ejs') %>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/login.css" />
