--- a/public/stylesheets/alunos.css
+++ b/public/stylesheets/alunos.css
@@ -1,4 +1,8 @@
 
+.bi-arrow-left-square{
+    fill: white;
+}
+
 .iconbtn {
     width: 30px;
     height: 30px;
@@ -10,7 +14,6 @@
     width: 30px;
     height: 30px;
     cursor: pointer;
-    margin-top: 20px;
     margin-left: 5px;
 
 }
@@ -26,7 +29,7 @@
 .headerLeft{
     display: flex;
     gap:10px;
-
+    align-items: center;
 }
 
 .btnlog {
@@ -34,11 +37,22 @@
     height: 40px;
     padding: 0;
     border: none;
-    background: rgb(204, 225, 239);
+    background: transparent;
     border-radius: 10%;
-    margin-top: 10px;
-    
+    margin-top: 5px;
+    margin-right: 30px;
+}
 
+.textSair{
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: -10px;
+}
+
+.sairHome{
+    margin-right:1000px;
+    
 }
 
 .btnNewR{
@@ -59,15 +73,17 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 0 10px;
-    background-color: rgb(231, 244, 255);
+    background-color: #242475;
     border: 0.5px solid  #0d2c92;
+    align-items: center;
 }
 
 .headerText{
     font-size: 25px;
     margin-top: 15px;
-    color:#0e215e;
+    color:#ffffff;
     font-weight: bold;
+    margin: 0;
 }
 
 .listRelatorios{
