--- a/views/mensagensEE-ID.ejs
+++ b/views/mensagensEE-ID.ejs
@@ -1,15 +1,14 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/alunos.css" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/mensagensEE.css" />
-<script defer src="/javascripts/messages.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+<script defer src="/javascripts/messages.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
 <head>
 	<meta charset="utf-8">
-	<title>CaderNet </title>
+	<title>CaderNet</title>
 </head>
-
 
 <div class="headerBar">
 	<div class="headerLeft">
@@ -47,11 +46,11 @@
 					</div>
 				</div>
 				<div class="inbox_chat ">
-					<% docentes.forEach(function (docente) { %>
+					<% docentesList.forEach(function (docente) { %>
 						<div class="chat_list active_chat"
 							onclick="window.location='http://localhost:3000/homepage/EE/1/mensagens' + '/<%= docente.docente_id%>'">
 							<div class="chat_people">
-								<div class="chat_ib">
+								<div class="chat_ib target">
 									<h5>
 										<%= docente.nome %>
 									</h5>
@@ -61,7 +60,49 @@
 						<% }) %>
 				</div>
 			</div>
+			<div class="mesgs">
+				<div class="msg_history " id="chatBox">
+					<div id="messageItems">
+						<% mensagens.forEach(function (mensagem) { %>
+							<% if(mensagem.type=='docente' ){ %>
+								<div class="incoming_msg">
+									<div class="received_msg">
+										<div class="received_withd_msg">
+											<!--nome do professor-->
+											<p>
+												<%= mensagem.sender %> - <%= mensagem.mensagem %>
+											</p>
+											<!--<span class="time_date"> DATA HORA</span>-->
+										</div>
+									</div>
+									<p></p>
+								</div>
+								<% } else { %>
+									<div class="outgoing_msg">
+										<div class="sent_msg">
+											<!--nome do EE-->
+											<p>
+												<%= mensagem.sender %> - <%= mensagem.mensagem %>
+											</p>
+											<!--<span class="time_date"> DATA HORA</span>-->
+										</div>
+										<p></p>
+									</div>
+									<% } %>
+										<% }) %>
+					</div>
+				</div>
+				<form method="post">
+					<div class="type_msg">
+						<div class="input_msg_write">
+							<input type="text" id="mensagem" name="mensagem" class="write_msg"
+								placeholder="Escreva a mensagem" required />
+							<button class="msg_send_btn" type="submit"><i class="fa fa-paper-plane-o"
+									aria-hidden="true"></i></button>
+						</div>
+					</div>
+				</form>
+			</div>
 		</div>
 	</div>
 </div>
-
