--- a/views/new_relatorio.ejs
+++ b/views/new_relatorio.ejs
@@ -5,16 +5,26 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+
+<head>
+    <meta charset="utf-8">
+    <title>CaderNet </title>
+</head>
+
 <div class="headerBar">
     <div class="headerLeft">
-        <img class="backIcon" src="/assets/goBack.png" onclick="window.history.back()" />
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            class="backIcon bi bi-arrow-left-square" viewBox="0 0 16 16" onclick="history.back()">
+            <path fill-rule="evenodd"
+                d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm11.5 5.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
+        </svg>
         <p class="headerText">Criar Relatório do Aluno </p>
 
     </div>
     <div>
         <form action="/logout" method="post">
             <button class="btnlog" type="submit">
-                <img class="iconbtn" src="/assets/logout.png" />
+                <p class="textSair">Sair</p>
             </button>
         </form>
     </div>
@@ -172,6 +182,27 @@
                     <input id="TAssiduidade" name="TAssiduidade" class="form-control input-sm"></input> </br>
                     <p><label for="DAssiduidade">Detalhes da assiduidade</label></p>
                     <textarea id="DAssiduidade" name="DAssiduidade" rows="4" cols="50"></textarea>
+                </div>
+
+            </div>
+            <h2>
+                <button class="formTextTitle" aria-expanded="false" type="button">
+                    Pontualidade
+                    <svg aria-hidden="true" focusable="false" viewBox="0 0 10 10">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="11" height=11" fill="currentColor"
+                            class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                        </svg>
+                    </svg>
+                </button>
+            </h2>
+            <div hidden>
+                <div class="card-body" type="button">
+                    <label for="TPontualidade" id="titlePontualidade">Informação geral</label>
+                    <input id="TPontualidade" name="TPontualidade" class="form-control input-sm"></input> </br>
+                    <p><label for="DPontualidade">Detalhes da Pontualidade</label></p>
+                    <textarea id="DPontualidade" name="DPontualidade" rows="4" cols="50"></textarea>
                 </div>
 
             </div>
