--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,16 +3,30 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <head>
+        <meta charset="utf-8">
+        <title>CaderNet </title>
+    </head>
+
 <div class="headerBar">
     <div class="headerLeft">
-        <img class="backIcon" src="/assets/goBack.png" onclick="history.back()" />
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            class="backIcon bi bi-arrow-left-square" viewBox="0 0 16 16" onclick="window.location='http://localhost:3000/'">
+            <path fill-rule="evenodd"
+                d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm11.5 5.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
+        </svg>
         <p class="headerText">Página não encontrada :(</p>
     </div>
+
     <div>
         <form action="/logout" method="post">
             <button class="btnlog" type="submit">
-                <img class="iconbtn" src="/assets/logout.png" />
+                <p class="textSair">Sair</p>
             </button>
         </form>
     </div>
 </div>
+
+<h1>Olha carambolas, a página não existe :(
+</h1>
+<h3>Erro - 404</h3>
