--- a/views/mensagensD.ejs
+++ b/views/mensagensD.ejs
@@ -1,8 +1,8 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/alunos.css" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/mensagens.css" />
-<script defer src="/javascripts/messages.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script defer src="/javascripts/messages.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
 <head>
@@ -17,7 +17,7 @@
             <path fill-rule="evenodd"
                 d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm11.5 5.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
         </svg>
-        </p>
+        <p class="headerText">Mensagens</p>
     </div>
     <div>
         <form action="/logout" method="post">
