--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -45,8 +45,8 @@ a {
 
 button {
 	border-radius: 20px;
-	border: 1px solid #ffffff;
-	background-color: #be83f5;
+	border: 2px solid #ffffff;
+	background-color: #4a52bb;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
