--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -30,7 +30,7 @@
 
 <br>
 <ul class="listRelatorios" id="AlunosList">
-    <input class="form-control" id="myInput" type="text" placeholder="Pesquisar..">
+    <input class="form-control" id="myInput" type="text" placeholder="Pesquisar Aluno - Encarregado de Educação">
     <% alunos.forEach(function (user) { %>
         <li>
             <div class="spanUser">
