--- a/views/homepageEE.ejs
+++ b/views/homepageEE.ejs
@@ -37,11 +37,11 @@
             <% alunos.forEach(function (aluno) { %>
                 <div class="col-xs-12 col-sm-4">
                     <div class="card"
-                        style="background: linear-gradient(rgba(49, 84, 238, 0.356), rgba(166, 179, 238, 0.356))">
+                        style="background: linear-gradient(rgba(18, 44, 163, 0.863), rgba(151, 57, 228, 0.356))">
                         <div class="btnscontainer">
-                            <button type="button" class="btnNewR"
+                            <button type="button" class="btnNewREE"
                                 onclick="window.location='/homepage/EE/<%= aluno.id %>/relatorios'">Relatórios</button>
-                            <button type="button" class="btnNewR"
+                            <button type="button" class="btnNewREE"
                                 onclick="window.location='/homepage/EE/<%= aluno.id %>/mensagens'">Mensagens</button>
                         </div>
                         <div class="card-description">
