--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 	<div class="container" id="container">
 		<div class="form-container sign-up-container">
 			<form action="/loginEE" method="post">
-				<h1>Bem vindo, Encarregado de Educação!</h1>
+				<h1>Bem vindo Encarregado de Educação!</h1>
 				<input type="username" name="username" placeholder="Username" />
 				<input type="password" name="password" placeholder="Password" />
 				<button type="submit">Entrar</button>
