--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -2,48 +2,49 @@
 
 
 .navbar {
-    background-color: rgb(238, 248, 248);
-    margin-top: -10;
-    margin-left: -10;
-    margin-right: -8;
+  background-color: rgb(238, 248, 248);
+  margin-top: -10;
+  margin-left: -10;
+  margin-right: -8;
 
 }
 
 .iconbtn {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 
 }
-.text-center{
+
+.text-center {
   font-family: 'Montserrat', sans-serif;
 }
 
 .logoutbtn {
 
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
 
 }
 
 .btnlog {
-    width: 40px;
-    height: 40px;
-    padding: 0;
-    border: none;
-    background: rgb(222, 230, 235);
-    border-radius: 10%;
-    margin-top: 5px;
-    margin-left: 95%;
-    margin-bottom: 5px;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  border: none;
+  background: rgb(222, 230, 235);
+  border-radius: 10%;
+  margin-top: 5px;
+  margin-left: 95%;
+  margin-bottom: 5px;
 
 }
 
 
 .classesText {
-    margin-right: 60%;
-    font-family: Helvetica ;
+  margin-right: 60%;
+  font-family: Helvetica;
 }
 
 
@@ -53,75 +54,88 @@
 @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700');
 
 body {
-    font-family: ' OpenSans', sans-serif;
+  font-family: ' OpenSans', sans-serif;
+  overflow: hidden;
 }
 
 
 .classesContainer {
 
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    margin-bottom: 20px;
-   
-    margin: 0 auto;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  margin-bottom: 20px;
+
+  margin: 0 auto;
+  justify-content: center;
 }
 
 
 body {
-    margin: 0;
-    font-family: Open-sans, sans-serif;
-  }
-  h1, h2, h3 {
-    font-family: Raleway, Helvetica, sans-serif;
-  }
-  h2 {
-    font-size: 28px;
-    font-weight: bold;
-    margin-bottom: 30px;
-    margin-top: 0;
-  }
-  .padded {
-    padding: 100px 0;
-  }
-  .wrapper-grey {
-    background: #F4F4F4;
-    
-  }
+  margin: 0;
+  font-family: Open-sans, sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  font-family: Raleway, Helvetica, sans-serif;
+}
+
+h2 {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  margin-top: 0;
+}
+
+.padded {
+  padding: 100px 0;
+}
+
+.wrapper-grey {
+  background: #F4F4F4;
+
+}
 
 
-  .card {
-    height: 250px;
-    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
-    background-size: cover !important;
-    color: white;
-    position: relative;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    border: 1px solid rgb(255, 255, 255);
-  }
-  
-  .card-description {
-    position: absolute;
-    bottom: 10px;
-    left: 40px;
-  }
-  .card-description h2 {
-    font-size: 40px;
-  }
-  .card-description p {
-    font-size: 15px;
-  }
+.card {
+  height: 250px;
+  background-size: cover !important;
+  color: white;
+  position: relative;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  border: 5px solid rgb(255, 255, 255);
+  -webkit-box-shadow: 0px 10px 40px -10px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 10px 40px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 10px 40px -10px rgba(0, 0, 0, 0.75);
+}
 
-  .features img {
-    width: 100px;
-  }
-  .features h2 {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-  .features p {
-    font-size: 15px;
-    font-weight: lighter;
-  }
+.card-description {
+  position: absolute;
+  bottom: 10px;
+  left: 40px;
+}
+
+.card-description h2 {
+  font-size: 40px;
+}
+
+.card-description p {
+  font-size: 15px;
+}
+
+.features img {
+  width: 100px;
+}
+
+.features h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.features p {
+  font-size: 15px;
+  font-weight: lighter;
+}
