--- a/public/stylesheets/homepageEE.css
+++ b/public/stylesheets/homepageEE.css
@@ -2,17 +2,16 @@
 
 
 
-.btnNewR {
-  border-radius: 10px;
-  border: 1px solid transparent;
-  background-color: rgb(59, 134, 219);
-  color: rgb(255, 255, 255);
+.btnNewREE {
+  border-radius: 20px;
+  border: 1px solid white;
+  background-color: transparent;
+  color: #f6f5f7;
   font-size: 15px;
   font-weight: bold;
-  padding: 9px 20px;
-  margin: 0 auto;
-  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
-  margin-left: 20px;
+  padding: 9px 30px;
+  margin-left: 6px;
+  box-shadow: 0 5px 5px rgba(8, 61, 236, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
 }
 
 .btnscontainer {
@@ -87,6 +86,7 @@
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
+   overflow: hidden;
 }
 
 h1,
