--- a/public/stylesheets/relatorios.css
+++ b/public/stylesheets/relatorios.css
@@ -24,7 +24,7 @@
 
 
 .urgentetrue {
-  background-color: rgb(248, 142, 106);
+  background-color: rgb(241, 127, 88);
 }
 
 .urgentText {
@@ -90,7 +90,7 @@
 
 .ContainerRelatorio {
   margin: 0 auto;
-  background: linear-gradient(#84c2f5, #b0c7f5);
+  background: linear-gradient(#84c2f5, #b0bdf5);
   display: flex;
   flex-direction: column;
   align-items: center;
