alunos: | e.e.: no alunos.ejs

--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -35,7 +35,7 @@
         <li>
             <div class="spanUser">
                 <h1 class="textUser">
-                    <%= user.nome_aluno %> - <%= user.nome_ee %>
+                    Aluno: <%= user.nome_aluno %> | E.E.: <%= user.nome_ee %>
                 </h1>
                 <div class="btnUser">
                     <button type="button" class="btnNewR"
