teeny change to mensagens layout literally :

--- a/views/mensagensEE-ID.ejs
+++ b/views/mensagensEE-ID.ejs
@@ -67,7 +67,7 @@
 										<div class="received_withd_msg">
 											<!--nome do professor-->
 											<p>
-												<%= mensagem.sender %> - <%= mensagem.mensagem %>
+												<%= mensagem.sender %>: <%= mensagem.mensagem %>
 											</p>
 											<!--<span class="time_date"> DATA HORA</span>-->
 										</div>
@@ -79,7 +79,7 @@
 										<div class="sent_msg">
 											<!--nome do EE-->
 											<p>
-												<%= mensagem.sender %> - <%= mensagem.mensagem %>
+												<%= mensagem.sender %>: <%= mensagem.mensagem %>
 											</p>
 											<!--<span class="time_date"> DATA HORA</span>-->
 										</div>
