--- a/views/mensagensD.ejs
+++ b/views/mensagensD.ejs
@@ -50,7 +50,7 @@
                                             <div class="received_withd_msg">
                                                 <!--nome do professor-->
                                                 <p>
-                                                    <%= mensagem.sender %> - <%= mensagem.mensagem %>
+                                                    <%= mensagem.sender %>: <%= mensagem.mensagem %>
                                                 </p>
                                                 <!--<span class="time_date"> DATA HORA</span>-->
                                             </div>
@@ -62,7 +62,7 @@
                                             <div class="sent_msg">
                                                 <!--nome do EE-->
                                                 <p>
-                                                    <%= mensagem.sender %> - <%= mensagem.mensagem %>
+                                                    <%= mensagem.sender %>: <%= mensagem.mensagem %>
                                                 </p>
                                                 <!--<span class="time_date"> DATA HORA</span>-->
                                             </div>
